Prevent external scrollbar keeping title visible

--- a/web/src/app/components/loi-properties-dialog/loi-properties-dialog.component.scss
+++ b/web/src/app/components/loi-properties-dialog/loi-properties-dialog.component.scss
@@ -15,6 +15,8 @@
  */
 
 .loi-properties-dialog-container {
+  overflow-y: hidden !important;
+
   .loi-icon-and-title {
     display: flex;
     align-items: center;
